--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "create-react-app",
+  "name": "globosarcoirisfirstapp",
   "version": "0.1.0",
   "private": true,
   "installConfig": {
@@ -19,12 +19,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
   "keywords": [],
-  "description": "Bootstrap files you get with `npx create-react-app new my-awesome-app`"
+  "description": ""
 }
